styles.css
@import url("https://fonts.googleapis.com/css2?family=Schoolbell&display=swap");

body {
  padding: 0;
  margin: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: "Schoolbell", monospace;
}

main {
  display: flex;
  width: 100%;
  height: 100vh;
  background: linear-gradient(
    to bottom,
    rgb(230, 210, 190),
    rgb(200, 180, 170)
  );
}

.frame-img {
  width: 360px;
  position: absolute;
  z-index: 2;
}
.cover-art {
  position: absolute;
  width: 280px;
  top: 46px;
  left: 43px;
}

.painting-wrapper {
  position: relative;
  width: 100%;
}

.furniture-wrapper {
  position: fixed;
  bottom: 0;
  width: 100%;
}

.furniture-wrapper a {
  z-index: 100;
  display: block;
  position: absolute;
  right: 120px;
  width: 200px;
}

.drawer {
  width: 500px;
  left: 30px;
  bottom: -140px;
  position: absolute;
}

.walkman {
  position: absolute;
  width: 160px;
  top: -270px;
  left: 50%;
}

